Some content or something

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 ---
 layout: default
-title: Developer, Chicana, lady lifter, coffee geek, ice cream gourmand.
+title: Pam O.
 ---
-Hola, I'm Pamela Ocampo.
+I'm a busy-body software developer living in San Francisco, CA.
+I claim myself to be a lady lifter, coffee geek, and ice cream gourmand.
+I think everyone should ride a bike.
