added a video because why not?

--- a/talks/bikes.html
+++ b/talks/bikes.html
@@ -75,9 +75,10 @@
                             <li>Every first Friday starting at 8pm --
                             <b>Today!</b></li>
                             <li>Route is announced the day of</li>
-                            <li>Themed flash mob of bikes and loud music touring
-                            the city</li>
+                            <li>Themed flash mob of bikes and loud music touring the city</li>
                         </ul>
+                        <video data-autoplay
+                            src="http://distilleryvesper8-0.ak.instagram.com/fcd11b2c751711e39f0c127ea8075ce8_101.mp4"></video>
                     </section>
                     <section>
                         <h3><a href="http://midnightmysteryride.org/sanfrancisco/"
