Added socialite rides

--- a/talks/bikes.html
+++ b/talks/bikes.html
@@ -98,23 +98,25 @@
                             Mission</li>
                         </ul>
                     </section>
-				</section>
-
-				<section data-markdown>
-					<script type="text/template">
-						## Markdown support
-
-						For those of you who like that sort of thing. Instructions and a bit more info available [here](https://github.com/hakimel/reveal.js#markdown).
-
-						```
-						<section data-markdown>
-						  ## Markdown support
-
-						  For those of you who like that sort of thing.
-						  Instructions and a bit more info available [here](https://github.com/hakimel/reveal.js#markdown).
-						</section>
-						```
-					</script>
+                    <section>
+                        <h3><a
+                                href="http://community.sportsbasement.com/calendar/"
+                        target="_blank">Sports Basement Riders Club</a></h3>
+                        <ul>
+                            <li>Every Sunday starting at 8:45 am</li>
+                            <li>Ride over the Golden Gate Bridge into Marin
+                            County and back.</li>
+                        </ul>
+				    </section>
+                    <section>
+                        <h3><a
+                                href="https://www.sfbike.org/event/tour-de-tandem/"
+                        target="_blank">Tour de Tandem</a></h3>
+                        <ul>
+                            <li>Sunday, May 4th starting at 11 am</li>
+                            <li> Easy-paced ride from the Panhandle to Ocean
+                            Beach and back.</li>
+				    </section>
 				</section>
 
 				<section id="transitions">
