--- a/talks/bikes.html
+++ b/talks/bikes.html
@@ -118,204 +118,238 @@
                             Beach and back.</li>
 				    </section>
 				</section>
+				<section>
+                    <section>
+					<h2>Urban Explorers</h2>
+					<p>
+						Learn more about the city and its inner workings.
+					</p>
 
-				<section id="transitions">
-					<h2>Transition Styles</h2>
-					<p>
-						You can select from different transitions, like: <br>
-						<a href="?transition=cube#/transitions">Cube</a> -
-						<a href="?transition=page#/transitions">Page</a> -
-						<a href="?transition=concave#/transitions">Concave</a> -
-						<a href="?transition=zoom#/transitions">Zoom</a> -
-						<a href="?transition=linear#/transitions">Linear</a> -
-						<a href="?transition=fade#/transitions">Fade</a> -
-						<a href="?transition=none#/transitions">None</a> -
-						<a href="?#/transitions">Default</a>
-					</p>
-				</section>
-
-				<section id="themes">
-					<h2>Themes</h2>
-					<p>
-						Reveal.js comes with a few themes built in: <br>
-						<a href="?#/themes">Default</a> -
-						<a href="?theme=sky#/themes">Sky</a> -
-						<a href="?theme=beige#/themes">Beige</a> -
-						<a href="?theme=simple#/themes">Simple</a> -
-						<a href="?theme=serif#/themes">Serif</a> -
-						<a href="?theme=night#/themes">Night</a> <br>
-						<a href="?theme=moon#/themes">Moon</a> -
-						<a href="?theme=solarized#/themes">Solarized</a>
-					</p>
-					<p>
-						<small>
-							* Theme demos are loaded after the presentation which leads to flicker. In production you should load your theme in the <code>&lt;head&gt;</code> using a <code>&lt;link&gt;</code>.
-						</small>
-					</p>
+                    </section>
+                    <section>
+                        <h3><a
+                                href="http://missionbicycle.com/store/10-mission-secrets-bike-tour"
+                        target="_blank">Mission Secrets Bike Tour</a></h3>
+                        <ul>
+                            <li>Sunday, May 4 @ 1pm</li>
+                            <li>Granted access to locations NOT open to the public in the heart of the Mission</li>
+                            <li>Tour led by Mission Bicycle Co.</li>
+                        </ul>
+                    </section>
+                    <section>
+                        <h3><a href="http://www.sfbike.org/event/the-sewer-ride/" target="_blank">Sewer Ride</a></h3>
+                        <ul>
+                            <li>Sunday, May 10 @ 12pm</li>
+                            <li>Explore the squishy boundary between humans and H2O, with emphasis on the massive sewer mechanics below the city.</li>
+                        </ul>
+                    </section>
+                    <section>
+                        <h3><a href="http://www.sfbike.org/event/surprise-ride-with-sosf-bike-tours/"
+                        target="_blank">SSurprise! Ride with SF Bike Tours</a></h3>
+                        <ul>
+                            <li>Friday, May 23 @ 4pm</li>
+                            <li>Surprise route to explore the culture, art and history of SF.</li>
+                        </ul>
+                    </section>
 				</section>
 
 				<section>
-					<h2>Global State</h2>
+                    <section>
+					<h2>Aesthetes</h2>
 					<p>
-						Set <code>data-state="something"</code> on a slide and <code>"something"</code>
-						will be added as a class to the document element when the slide is open. This lets you
-						apply broader style changes, like switching the background.
+						Art connoisseurs.
 					</p>
-				</section>
+                    </section>
 
-				<section data-state="customevent">
-					<h2>Custom Events</h2>
-					<p>
-						Additionally custom events can be triggered on a per slide basis by binding to the <code>data-state</code> name.
-					</p>
-					<pre><code data-trim contenteditable style="font-size: 18px; margin-top: 20px;">
-Reveal.addEventListener( 'customevent', function() {
-	console.log( '"customevent" has fired' );
-} );
-					</code></pre>
-				</section>
-
-				<section>
-					<section data-background="#007777">
-						<h2>Slide Backgrounds</h2>
-						<p>
-							Set <code>data-background="#007777"</code> on a slide to change the full page background to the given color. All CSS color formats are supported.
-						</p>
-						<a href="#" class="image navigate-down">
-							<img width="178" height="238" src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Down arrow">
-						</a>
-					</section>
-					<section data-background="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png">
-						<h2>Image Backgrounds</h2>
-						<pre><code>&lt;section data-background="image.png"&gt;</code></pre>
-					</section>
-					<section data-background="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" data-background-repeat="repeat" data-background-size="100px">
-						<h2>Repeated Image Backgrounds</h2>
-						<pre><code style="word-wrap: break-word;">&lt;section data-background="image.png" data-background-repeat="repeat" data-background-size="100px"&gt;</code></pre>
-					</section>
-				</section>
-
-				<section data-transition="linear" data-background="#4d7e65" data-background-transition="slide">
-					<h2>Background Transitions</h2>
-					<p>
-						Pass reveal.js the <code>backgroundTransition: 'slide'</code> config argument to make backgrounds slide rather than fade.
-					</p>
-				</section>
-
-				<section data-transition="linear" data-background="#8c4738" data-background-transition="slide">
-					<h2>Background Transition Override</h2>
-					<p>
-						You can override background transitions per slide by using <code>data-background-transition="slide"</code>.
-					</p>
+                    <section>
+                        <h3><a href="https://www.sfbike.org/event/bikes-to-books/" target="_blank">Bikes to Books</a></h3>
+                        <ul>
+                            <li>Saturday , May 3 @ 12:45pm</li>
+                            <li>Literary bike tour of streets named after notable authors in North Beach.</li>
+                            <li>Led by City Lights Bookstore</li>
+                        </ul>
+                    </section>
+                    <section>
+                        <h3><a href="https://www.sfbike.org/event/bikes-to-books/" target="_blank">Das Bike-In Movie Night</a></h3>
+                        <ul>
+                            <li>Tuesday , May 27 @ 7:30pm</li>
+                            <li>Community, food, beer, and bike-related films.</li>
+                            <li>Hosted by Cyprian’s Art-Resilience-Community Center</li>
+                        </ul>
+                    </section>
+                    <section>
+                        <h3><a href="https://www.sfbike.org/event/bikes-to-books/" target="_blank">RickShaw Bags Bike-In Movie Night</a></h3>
+                        <ul>
+                            <li>Thursday , May 29 @ 6:30pm</li>
+                            <li>Watch a cult classic with RickShaw Bagworks</li>
+                        </ul>
+                    </section>
 				</section>
 
 				<section>
-					<h2>Clever Quotes</h2>
+                    <section>
+					<h2>Foodies</h2>
 					<p>
-						These guys come in two forms, inline: <q cite="http://searchservervirtualization.techtarget.com/definition/Our-Favorite-Technology-Quotations">
-						&ldquo;The nice thing about standards is that there are so many to choose from&rdquo;</q> and block:
+						Om, nom, nom, nom.
 					</p>
-					<blockquote cite="http://searchservervirtualization.techtarget.com/definition/Our-Favorite-Technology-Quotations">
-						&ldquo;For years there has been a theory that millions of monkeys typing at random on millions of typewriters would
-						reproduce the entire works of Shakespeare. The Internet has proven this theory to be untrue.&rdquo;
+                    </section>
+
+                    <section>
+                        <h3><a href="https://www.sfbike.org/event/3rd-annual-bicycle-dumpling-tour/" target="_blank">3rd Annual Dumpling Tour</a></h3>
+                        <ul>
+                            <li>Saturday, May 10 @ 11am</li>
+                            <li>Explore Western SF bike routes and parks.</li>
+                            <li>3-4 stops to buy dumplings at shops along the way</li>
+                        </ul>
+                    </section>
+
+                    <section>
+                        <h3><a
+                                href="https://www.sfbike.org/event/pedals-to-produce-urban-agriculture-tour/" target="_blank">Pedal to Produce - Urban
+                        Agriculture</a></h3>
+                        <ul>
+                            <li>Sunday, May 4 @ 10am</li>
+                            <li>Explore several community gardens and nifty green infrastructure</li>
+                        </ul>
+                    </section>
+
+                    <section>
+                        <h3><a
+                                href="http://www.sfbike.org/event/crafts-craft-beer/" target="_blank">Crafts & Craft Beer</a></h3>
+                        <ul>
+                            <li>Saturday, May 3 @ 3:30pm</li>
+                            <li>Create unique bike crafts, enjoy local craft brews, and meet other crafty, community-minded
+                            cyclists.
+                            </li>
+                        </ul>
+                    </section>
+
+                    <section>
+                        <h3><a href="http://www.climateride.org/events"
+                                target="_blank">Climate Ride Wine Country</a></h3>
+                        <ul>
+                            <li>May 17-20</li>
+                            <li>4-day trip beginning in San Franciscio, heading
+                            up north to Wine Country and on to Sacramento.</li>
+                        </ul>
+                    </section>
+
+				</section>
+
+				<section>
+                    <section>
+					<h2>Speed Racers</h2>
+					<p>
+						For your inner Speedy Gonzalez
+					</p>
+                    </section>
+
+                    <section>
+                        <h3><a href="https://www.facebook.com/events/632443953479018/" target="_blank">Medusas Revenge - AlleyCat to Raise the Kraken</a></h3>
+                        <ul>
+                            <li>Saturday, May 17 @ 11am</li>
+                            <li>A scavengerhunt based on Greek Mythology</li>
+                            <li>Tons of prizes!</li>
+                        </ul>
+                    </section>
+                    <section>
+                        <h3><a
+                                href="http://www.redbull.com/us/en/bike/events/1331586757735/red-bull-ride-n-style"
+                        target="_blank">Redbull Ride + Style</a></h3>
+                        <ul>
+                            <li>Sunday, May 4 @ 11am</li>
+                            <li>Track style races and freestyle obstacle courses</li>
+                        </ul>
+                    </section>
+
+
+				</section>
+
+				<section>
+                    <section>
+					<h2>Long Rollers</h2>
+					<p>
+						So you like the scenic route, huh?
+					</p>
+                    </section>
+
+                    <section>
+                        <h3><a href="https://www.facebook.com/events/223289951201448/?ref=5&source=1" target="_blank">Camping Weekender to Half
+                        Moon Bay</a></h3>
+                        <ul>
+                            <li>Saturday, May 17 @ 10:30am</li>
+                            <li>Overnight adventure to the iconic Half Moon Bay State Beach. </li>
+                            <li>28 mile trip each way.</li>
+                        </ul>
+                    </section>
+                    <section>
+                        <h3><a
+                                href="https://www.eventbrite.com/e/sf-bike-month-paradise-loop-tickets-11230991197"
+                        target="_blank">Marin Paradise Loop</a></h3>
+                        <ul>
+                            <li>Saturday, May 17 @ 8am</li>
+                            <li>Classic bike ride over the Golden Gate bridge
+                            and up to Marin.</li>
+                            <li>Over 40 mile trip from SF and back</li>
+                        </ul>
+                    </section>
+                    <section>
+                        <h3><a
+                                href="http://www.sfbike.org/event/cycling-crissy-pedaling-presidio/" target="_blank">Cycling Crissy, Pedaling
+                        Presidio</a></h3>
+                        <ul>
+                            <li>Sunday, May 18 @ 1pm</li>
+                            <li>2 for 1 ride: 2 mile ride around Crissy Field
+                            with an overview of the Crissy Field sculptures.</li>
+                            <li>Finish off with a 3 mile loop around the
+                            Presidio.</li>
+                        </ul>
+                    </section>
+				</section>
+
+				<section>
+                    <section>
+					<h2>La Cycliste Féminine</h2>
+					<p>
+						For the ladies
+					</p>
+                    </section>
+
+                    <section>
+                        <h3><a href="http://cyclofemme.com"
+                                target="_blank">CycloFemme</a></h3>
+                        <ul>
+                            <li>Sunday, May 11</li>
+                            <li>World-wide, socially-driven grass-roots
+                            celebration of women on bikes.</li>
+                            <li><a href="https://www.facebook.com/events/569824326434332/" target="_blank">1pm Oakland/Berkeley</a></li>
+                            <li><a href="http://www.meetup.com/Performance-Bicycle-Great-Ride-Series-San-Francisco/events/179078442/" target="_blank">9am San Francisco - Ride with Performance Bikes</a></li>
+                        </ul>
+                    </section>
+                    <section>
+                        <h3><a href="https://www.facebook.com/events/505009559610159/" target="_blank">Women Ride the Waterfront</a></h3>
+                        <ul>
+                            <li>Saturday, May 10 @ 10am</li>
+                            <li>Ladies-only ride along the scenic perimiter of
+                            San Francisco.</li>
+                            <li>Bike along The Embarcadero to the Greate
+                            Highway</li>
+                        </ul>
+                    </section>
+
+
+				</section>
+
+				<section>
+					<blockquote>
+						&ldquo;When I see an adult on a bicycle, I do not despair for the future of the human race.&rdquo;
 					</blockquote>
-				</section>
-
-				<section>
-					<h2>Pretty Code</h2>
-					<pre><code data-trim contenteditable>
-function linkify( selector ) {
-  if( supports3DTransforms ) {
-
-    var nodes = document.querySelectorAll( selector );
-
-    for( var i = 0, len = nodes.length; i &lt; len; i++ ) {
-      var node = nodes[i];
-
-      if( !node.className ) {
-        node.className += ' roll';
-      }
-    }
-  }
-}
-					</code></pre>
-					<p>Courtesy of <a href="http://softwaremaniacs.org/soft/highlight/en/description/">highlight.js</a>.</p>
-				</section>
-
-				<section>
-					<h2>Intergalactic Interconnections</h2>
-					<p>
-						You can link between slides internally,
-						<a href="#/2/3">like this</a>.
-					</p>
-				</section>
-
-				<section>
-					<section id="fragments">
-						<h2>Fragmented Views</h2>
-						<p>Hit the next arrow...</p>
-						<p class="fragment">... to step through ...</p>
-						<ol>
-							<li class="fragment"><code>any type</code></li>
-							<li class="fragment"><em>of view</em></li>
-							<li class="fragment"><strong>fragments</strong></li>
-						</ol>
-
-						<aside class="notes">
-							This slide has fragments which are also stepped through in the notes window.
-						</aside>
-					</section>
-					<section>
-						<h2>Fragment Styles</h2>
-						<p>There's a few styles of fragments, like:</p>
-						<p class="fragment grow">grow</p>
-						<p class="fragment shrink">shrink</p>
-						<p class="fragment roll-in">roll-in</p>
-						<p class="fragment fade-out">fade-out</p>
-						<p class="fragment highlight-red">highlight-red</p>
-						<p class="fragment highlight-green">highlight-green</p>
-						<p class="fragment highlight-blue">highlight-blue</p>
-						<p class="fragment current-visible">current-visible</p>
-						<p class="fragment highlight-current-blue">highlight-current-blue</p>
-					</section>
-				</section>
-
-				<section>
-					<h2>Spectacular image!</h2>
-					<a class="image" href="http://lab.hakim.se/meny/" target="_blank">
-						<img width="320" height="299" src="http://s3.amazonaws.com/hakim-static/portfolio/images/meny.png" alt="Meny">
-					</a>
-				</section>
-
-				<section>
-					<h2>Export to PDF</h2>
-					<p>Presentations can be <a href="https://github.com/hakimel/reveal.js#pdf-export">exported to PDF</a>, below is an example that's been uploaded to SlideShare.</p>
-					<iframe id="slideshare" src="http://www.slideshare.net/slideshow/embed_code/13872948" width="455" height="356" style="margin:0;overflow:hidden;border:1px solid #CCC;border-width:1px 1px 0;margin-bottom:5px" allowfullscreen> </iframe>
-					<script>
-						document.getElementById('slideshare').attributeName = 'allowfullscreen';
-					</script>
-				</section>
-
-				<section>
-					<h2>Take a Moment</h2>
-					<p>
-						Press b or period on your keyboard to enter the 'paused' mode. This mode is helpful when you want to take distracting slides off the screen
-						during a presentation.
-					</p>
-				</section>
-
-				<section>
-					<h2>Stellar Links</h2>
-					<ul>
-						<li><a href="http://slid.es">Try the online editor</a></li>
-						<li><a href="https://github.com/hakimel/reveal.js">Source code on GitHub</a></li>
-						<li><a href="http://twitter.com/hakimel">Follow me on Twitter</a></li>
-					</ul>
+					<p>H.G. Wells</p>
 				</section>
 
 				<section>
 					<h1>THE END</h1>
-					<h3>BY Hakim El Hattab / hakim.se</h3>
+					<h3>BY Pamela Ocampo / @pmocampo</h3>
 				</section>
 
 			</div>
