Images and bike to work day

--- a/talks/bikes.html
+++ b/talks/bikes.html
@@ -48,6 +48,17 @@
 					<h3>May is Bike Month in San Francisco</h3>
 					<p>Celebrate 31 days of Biking</p>
 				</section>
+                <section
+                    data-background="https://farm8.staticflickr.com/7285/9047029176_02f1e6a538_b.jpg">
+                    <h1><a href="https://www.sfbike.org/bike-to-work-day/">Bike
+                            to Work Day</a></h1>
+                    <h2>May 8th</h2>
+                    <blockquote>
+						&ldquo;When I see an adult on a bicycle, I do not despair for the future of the human race.&rdquo;
+                    </blockquote>
+                    <h3>H.G. Wells</h3>
+                    <!--- Tommy Wells https://flic.kr/ps/2u1rrd -->
+                </section>
 
 				<section>
 					<h2>Velo-Taxonomy</h2>
@@ -62,7 +73,8 @@
 				</section>
 
 				<section>
-                    <section>
+                    <section
+                        data-background="https://farm9.staticflickr.com/8429/7647906092_d7e7c1a0ee_h.jpg">
 					<h2>Socialites</h2>
 					<p>
 						Just wanna ride and make new friends? No problem.
@@ -342,7 +354,6 @@
 
 				<section>
 					<blockquote>
-						&ldquo;When I see an adult on a bicycle, I do not despair for the future of the human race.&rdquo;
 					</blockquote>
 					<p>H.G. Wells</p>
 				</section>
