Yay pretty pictures

--- a/talks/bikes.html
+++ b/talks/bikes.html
@@ -48,8 +48,9 @@
 					<h3>May is Bike Month in San Francisco</h3>
 					<p>Celebrate 31 days of Biking</p>
 				</section>
+                <!-- https://www.flickr.com/photos/kseni14/5001663946 -->
                 <section
-                    data-background="https://farm8.staticflickr.com/7285/9047029176_02f1e6a538_b.jpg">
+                    data-background="images/work.jpg">
                     <h1><a href="https://www.sfbike.org/bike-to-work-day/">Bike
                             to Work Day</a></h1>
                     <h2>May 8th</h2>
@@ -57,7 +58,6 @@
 						&ldquo;When I see an adult on a bicycle, I do not despair for the future of the human race.&rdquo;
                     </blockquote>
                     <h3>H.G. Wells</h3>
-                    <!--- Tommy Wells https://flic.kr/ps/2u1rrd -->
                 </section>
 
 				<section>
@@ -131,7 +131,9 @@
 				    </section>
 				</section>
 				<section>
-                    <section>
+                    <!-- https://www.flickr.com/photos/69655412@N05/6614701569 -->
+                    <section
+                    data-background="https://farm8.staticflickr.com/7154/6614701569_5c4052563c_b.jpg">
 					<h2>Urban Explorers</h2>
 					<p>
 						Learn more about the city and its inner workings.
@@ -157,7 +159,7 @@
                     </section>
                     <section>
                         <h3><a href="http://www.sfbike.org/event/surprise-ride-with-sosf-bike-tours/"
-                        target="_blank">SSurprise! Ride with SF Bike Tours</a></h3>
+                        target="_blank">Surprise! Ride with SF Bike Tours</a></h3>
                         <ul>
                             <li>Friday, May 23 @ 4pm</li>
                             <li>Surprise route to explore the culture, art and history of SF.</li>
@@ -166,7 +168,8 @@
 				</section>
 
 				<section>
-                    <section>
+                    <!-- https://www.flickr.com/photos/funny_cyclist/4508938707 -->
+                    <section data-background="images/artsy.jpg">
 					<h2>Aesthetes</h2>
 					<p>
 						Art connoisseurs.
@@ -199,7 +202,7 @@
 				</section>
 
 				<section>
-                    <section>
+                    <section data-background="images/foodie.jpg">
 					<h2>Foodies</h2>
 					<p>
 						Om, nom, nom, nom.
@@ -241,7 +244,7 @@
                                 target="_blank">Climate Ride Wine Country</a></h3>
                         <ul>
                             <li>May 17-20</li>
-                            <li>4-day trip beginning in San Franciscio, heading
+                            <li>4-day trip beginning in San Francisco, heading
                             up north to Wine Country and on to Sacramento.</li>
                         </ul>
                     </section>
@@ -249,7 +252,9 @@
 				</section>
 
 				<section>
-                    <section>
+                    <!--- https://www.flickr.com/photos/terror/5744674148 -->
+                    <section
+                        data-background="images/speedy.jpg">
 					<h2>Speed Racers</h2>
 					<p>
 						For your inner Speedy Gonzalez
@@ -278,7 +283,9 @@
 				</section>
 
 				<section>
-                    <section>
+                    <!-- https://www.flickr.com/photos/gzahnd/3227454026 -->
+                    <section
+                        data-background="images/scenic.jpg">
 					<h2>Long Rollers</h2>
 					<p>
 						So you like the scenic route, huh?
@@ -320,7 +327,7 @@
 				</section>
 
 				<section>
-                    <section>
+                    <section data-background="images/femme.jpg">
 					<h2>La Cycliste Féminine</h2>
 					<p>
 						For the ladies
@@ -344,18 +351,12 @@
                             <li>Saturday, May 10 @ 10am</li>
                             <li>Ladies-only ride along the scenic perimiter of
                             San Francisco.</li>
-                            <li>Bike along The Embarcadero to the Greate
+                            <li>Bike along The Embarcadero to the Great
                             Highway</li>
                         </ul>
                     </section>
 
 
-				</section>
-
-				<section>
-					<blockquote>
-					</blockquote>
-					<p>H.G. Wells</p>
 				</section>
 
 				<section>
