--- a/talks/bikes.html
+++ b/talks/bikes.html
@@ -355,8 +355,16 @@
                             Highway</li>
                         </ul>
                     </section>
-
-
+                    <section>
+                        <h3><a
+                                href="https://www.facebook.com/fixwithoutdix?fref=ts"
+                                target="_blank">Fix Without Dix Oakland</a></h3>
+                        <ul>
+                            <li>Every Wednesday @ 6:30pm</li>
+                            <li>Female fixed gear enthusiasts wanting to increase safety and inclusivity in cycling.</li>
+                            <li>Meet at Lake Merrit BART, roll out at 7pm</li>
+                        </ul>
+                    </section>
 				</section>
 
 				<section>
