--- a/talks/bikes.html
+++ b/talks/bikes.html
@@ -361,7 +361,10 @@
                                 target="_blank">Fix Without Dix Oakland</a></h3>
                         <ul>
                             <li>Every Wednesday @ 6:30pm</li>
-                            <li>Female fixed gear enthusiasts wanting to increase safety and inclusivity in cycling.</li>
+                            <li>Female fixed-gear enthusiasts wanting to
+                            increase safety and inclusivity in cycling and to
+                            empowering more women to get on their two wheels and
+                            ride together.</li>
                             <li>Meet at Lake Merrit BART, roll out at 7pm</li>
                         </ul>
                     </section>
