Added an li grid

--- a/talks/quantifiedself.html
+++ b/talks/quantifiedself.html
@@ -15,7 +15,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 		<link rel="stylesheet" href="css/reveal.min.css">
-		<link rel="stylesheet" href="css/theme/default.css" id="theme">
+		<link rel="stylesheet" href="css/theme/simple.css" id="theme">
 
 		<!-- For syntax highlighting -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -61,40 +61,29 @@
 				 <section data-autoSlide="30000">
                     <h1>What things?</h1>
                     <p>Everything I care about lives in my pocket.</p>
-                    <table>
-                        <tr>
-                            <td><img src="http://i.imgur.com/y775fvX.jpg" title="MyFitnessPal" /></td>
-                            <td><img src="http://i.imgur.com/m6tSevH.jpg" title="Fitocracy" /></td>
-                            <td><img src="http://i.imgur.com/FbA6yBY.jpg" title="Untappd" /></td>
-                            <td><img src="http://i.imgur.com/lIGwWYY.jpg" title="Coffee by Jawbone" /></td>
-                        </tr>
-                        <tr>
-                            <td>Nutrition</td>
-                            <td>Strength</td>
-                            <td>BEER!</td>
-                            <td>Coffee</td>
-                        </tr>
-                        <tr>
-                            <td><img src="http://i.imgur.com/cVmayb6.jpg" title="Goodreads" /></td>
-                            <td><img src="http://i.imgur.com/Eki3iBf.jpg" title="Pocket" /></td>
-                            <td><img src="http://i.imgur.com/FrZqQR4.jpg" title="Foursquare" /></td>
-                            <td><img src="http://i.imgur.com/qMziIPY.jpg" title="Strava" /></td>
-                        </tr>
-                        <tr>
-                            <td>Books</td>
-                            <td>Articles</td>
-                            <td>Places</td>
-                            <td>Rides</td>
-                        </tr>
-                        <tr>
-                            <td><img src="http://i.imgur.com/lUD3i4d.jpg" title="Jawbone" /></td>
-                            <td><img src="http://i.imgur.com/tg50Jlc.jpg" title="Hype Machine" /></td>
-                        </tr>
-                        <tr>
-                            <td>Steps & Zzzs</td>
-                            <td>Jams</td>
-                        </tr>
-                    </table>
+                    <ul class="grid">
+                        <li><img src="http://i.imgur.com/y775fvX.jpg"
+                        title="MyFitnessPal" /><br />Nutrition</li>
+                        <li><img src="http://i.imgur.com/m6tSevH.jpg"
+                            title="Fitocracy" /><br />
+                        Strength</li>
+                        <li><img src="http://i.imgur.com/FbA6yBY.jpg"
+                        title="Untappd" /><br />BEER!<li>
+                        <li><img src="http://i.imgur.com/lIGwWYY.jpg"
+                        title="Coffee by Jawbone" /><br /> Coffee</li>
+                        <li><img src="http://i.imgur.com/cVmayb6.jpg"
+                        title="Goodreads" /><br />Books<li>
+                        <li><img src="http://i.imgur.com/Eki3iBf.jpg"
+                        title="Pocket" /><br />Articles</li>
+                        <li><img src="http://i.imgur.com/FrZqQR4.jpg"
+                        title="Foursquare" /><br />Places</li>
+                        <li><img src="http://i.imgur.com/qMziIPY.jpg"
+                        title="Strava" /><br />Rides</li>
+                        <li><img src="http://i.imgur.com/lUD3i4d.jpg"
+                        title="Jawbone" /><br />Steps & Zzzs</li>
+                        <li><img src="http://i.imgur.com/tg50Jlc.jpg"
+                        title="Hype Machine" /><br />Jams</li>
+                    </ul>
                     <aside class="notes">
                         <ol>
                             <li>Daily nutrition with MyFitnessPal: calories and
