--- a/talks/quantifiedself.html
+++ b/talks/quantifiedself.html
@@ -15,7 +15,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 		<link rel="stylesheet" href="css/reveal.min.css">
-		<link rel="stylesheet" href="css/theme/simple.css" id="theme">
+		<link rel="stylesheet" href="css/theme/purple.css" id="theme">
 
 		<!-- For syntax highlighting -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -55,12 +55,11 @@
 					</aside>
 				</section>
                 <section>
-                    <h1>ALL OF THEM</h1>
                     <img src="http://i.imgur.com/XlJCDKO.jpg" alt="The Oatmeal:Track all the things">
+                    <h1>ALL OF THEM</h1>
                 </section>
 				 <section data-autoSlide="30000">
                     <h1>What things?</h1>
-                    <p>Everything I care about lives in my pocket.</p>
                     <ul class="grid">
                         <li><img src="http://i.imgur.com/y775fvX.jpg"
                         title="MyFitnessPal" /><br />Nutrition</li>
@@ -84,6 +83,7 @@
                         <li><img src="http://i.imgur.com/tg50Jlc.jpg"
                         title="Hype Machine" /><br />Jams</li>
                     </ul>
+                    <p>Everything I care about lives in my pocket.</p>
                     <aside class="notes">
                         <ol>
                             <li>Daily nutrition with MyFitnessPal: calories and
@@ -106,82 +106,142 @@
 					</aside>
                 </section>
 				 <section>
-                    <h1>4</h1>
+                    <h1>How'd I get started?</h1>
+                    <p>In 2010, I started tracking the weights I was lifting and eventually
+                    calories I was eating, which led to me going </p>
+                    <ul class="grid">
+                        <li class="two">from this<br /><img src="http://i.imgur.com/hdI41me.jpg" alt="Me in
+                        2010"/></li>
+                        <li class="two">to this<br /><img
+                        src="http://i.imgur.com/cyE7Xux.jpg" width="66%"
+                        height="66%" alt="Me Summer 2013" /></li>
+                    </ul>
+                    <aside class="notes">Serendipitously
+                        <br />
+                    </aside>
                 </section>
 				 <section>
-                    <h1>5</h1>
+                    <h1>Getting Started</h1>
+                    <ul>
+                        <li>Tracked lifting progress with Fitocracy</li>
+                        <li>Kept an eye on biometrics</li>
+                        <ul>
+                            <li>Pounds</li>
+                            <li>Body fat</li>
+                            <li>Tape measurements</li>
+                            <li>Clothing</li>
+                        </ul>
+                        <li>Nutrition, nutrition, nutrition</li>
+                        <ul>
+                            <li>Calories</li>
+                            <li>Macronutrient balance</li>
+                            <ul>
+                                <li>Low carb, high protein, moderate fats</li>
+                                <li>High carb, moderate protein, moderate fats</li>
+                                <li>Macronutrient timing</li>
+                            </ul>
+                        </ul>
+                    </ul>
+                    <br />
+                    <p>Trends in data over time drove me to iterate on process
+                    to maintain progress</p>
                 </section>
 				 <section>
-                    <h1>6</h1>
-                </section>
-				 <section> <h1>7</h1> </section>
-				 <section>
-                    <h1>8</h1>
-                </section>
-				 <section>
-                    <h1>9</h1>
-                </section>
-				 <section>
-                    <h1>10</h1>
-                </section>
-				 <section>
-                    <h1>11</h1>
-                </section>
-				 <section>
-                    <h1>12</h1>
-                </section>
-				 <section>
-                    <h1>13</h1>
-                </section>
-				 <section>
-                    <h1>14</h1>
-                </section>
-				 <section>
-                    <h1>15</h1>
-                </section>
-				 <section>
-                    <h1>16</h1>
-                </section>
-				 <section>
-                    <h1>17</h1>
-                </section>
-				 <section>
-                    <h1>18</h1>
-                </section>
-				 <section>
-                    <h1>19</h1>
-                </section>
-				 <section>
-                    <h1>20</h1>
+                    <h1>Learned my limits</h1>
+                    <p>Eat less, move more? …not always the best</p>
+                    <div>More != better<br />
+                        Low calories & heavy lifting do not play well
+                        together.<br /><br />
+                        <span class="caution"><b>Proceed with
+                        caution!</b></span> It’s not sustainable for a long
+                period of time and requires reverse dieting to scale back.<br />
+                        Reverse dieting? Add more calories to diet until you stop losing.
+                    </div>
                 </section>
                 <section>
-					<section id="fragments">
-						<h2>What did I do?</h2>
-						<p class="fragment">... to step through ...</p>
-						<ol>
-							<li class="fragment"><code>any type</code></li>
-							<li class="fragment"><em>of view</em></li>
-							<li class="fragment"><strong>fragments</strong></li>
-						</ol>
-
-						<aside class="notes">
-							This slide has fragments which are also stepped through in the notes window.
-						</aside>
-					</section>
-					<section>
-						<h2>Fragment Styles</h2>
-						<p>There's a few styles of fragments, like:</p>
-						<p class="fragment grow">grow</p>
-						<p class="fragment shrink">shrink</p>
-						<p class="fragment roll-in">roll-in</p>
-						<p class="fragment fade-out">fade-out</p>
-						<p class="fragment highlight-red">highlight-red</p>
-						<p class="fragment highlight-green">highlight-green</p>
-						<p class="fragment highlight-blue">highlight-blue</p>
-						<p class="fragment current-visible">current-visible</p>
-						<p class="fragment highlight-current-blue">highlight-current-blue</p>
-					</section>
-				</section>
+                    <h3>Moderation creates</h3>
+                    <h1>STICKY HABITS</h1>
+                    <ul>
+                        <li>Abs are made in the kitchen but you can have your
+                        ice cream too</li>
+                        <li>Tracking helped me make lifestyle changes instead
+                        of being in a “I’m on a diet” mindset</li>
+                        <li>Seeing numbers on the barbell go up made lifting a
+                        hobby and not a chore.</li>
+                    </ul>
+                    <aside class="notes">
+                        Eventually, habits will form. I climbed Half Dome a
+                        couple of weekends ago after passing up on the
+                        opportunity 5 years ago. Why did I pass it up? I had no
+                        confidence in my level of fitness.
+                    </aside>
+                </section>
+				 <section>
+                    <h1>Biggest Challenges</h1>
+                    <ul>
+                        <li>Patience</li>
+                        <ul>
+                            <li>Results don’t happen overnight</li>
+                        </ul>
+                        <li>Consistency</li>
+                        <ul>
+                            <li>Can’t change too many variables at once</li>
+                            <li>Hard to pinpoint what works and what doesn’t</li>
+                        </ul>
+                    </ul>
+                </section>
+				 <section>
+                    <h3>What's my</h3>
+                    <h1>"End Goal"?</h1>
+                    <ul>
+                        <li>Strength?</li>
+                        <ul>
+                            <li>I Don’t see myself competing any time soon.
+                        </ul>
+                        <li>Weight?</li>
+                        <ul>
+                            <li>It’s just a number</li>
+                        </ul>
+                        <li>Physique?</li>
+                        <ul>
+                            <li>Maybe I just want to look like I lift. Don’t
+                            necesarily need to be super strong.  ¯\_(ツ)_/¯</li>
+                        </ul>
+                    </ul>
+                </section>
+				 <section>
+                    <h1>Do I still track?</h1>
+                    <h3>Yep.</h3>
+                    <ul>
+                        <li> Self-accountability</li>
+                        <li> Keeps me on track</li>
+                        <li> Maybe it’s a distraction. </li>
+                        <li> Second nature habit for me now after I began the process of reverse dieting</li>
+                        <li> Maintain an eye on levels of physical well being and mental sanity</li>
+                    </ul>
+                </section>
+				 <section>
+                    <h1>Future Plans</h1>
+                    No immediate plans or concerns...
+                </section>
+				 <section>
+                    <h1>Potential learnings</h1>
+                    <ul>
+                        <li>How does caffeine affect deep sleep?</li>
+                        <li>Optimal sleep for strength levels?</li>
+                        <li>Total calories and the effect on sound sleep</li>
+                        <li>Macronutrient levels and effects of sleep</li>
+                    </ul>
+                </section>
+				 <section>
+                    <h1>Visualizations</h1>
+                    <ul>
+                        <li>Top foods consumed per season</li>
+                        <li>Most frequented business categories (per region, over time, etc)</li>
+                        <li>Highest source of macronutrients (i.e. Chicken for protein?)</li>
+                        <li>Estimated vitamin or mineral deficiencies?</li>
+                    </ul>
+                </section>
 			</div>
 		</div>
 
