Pre-feedback draft

--- a/talks/quantifiedself.html
+++ b/talks/quantifiedself.html
@@ -55,35 +55,26 @@
 					</aside>
 				</section>
                 <section>
-                    <img src="http://i.imgur.com/XlJCDKO.jpg" alt="The Oatmeal:Track all the things">
+                    <img src="images/qs/oatmeal.jpg" alt="The Oatmeal:Track all the things">
                     <h1>ALL OF THEM</h1>
                 </section>
 				 <section data-autoSlide="30000">
                     <h1>What things?</h1>
-                    <ul class="grid">
-                        <li><img src="http://i.imgur.com/y775fvX.jpg"
-                        title="MyFitnessPal" /><br />Nutrition</li>
-                        <li><img src="http://i.imgur.com/m6tSevH.jpg"
-                            title="Fitocracy" /><br />
-                        Strength</li>
-                        <li><img src="http://i.imgur.com/FbA6yBY.jpg"
-                        title="Untappd" /><br />BEER!<li>
-                        <li><img src="http://i.imgur.com/lIGwWYY.jpg"
-                        title="Coffee by Jawbone" /><br /> Coffee</li>
-                        <li><img src="http://i.imgur.com/cVmayb6.jpg"
-                        title="Goodreads" /><br />Books<li>
-                        <li><img src="http://i.imgur.com/Eki3iBf.jpg"
-                        title="Pocket" /><br />Articles</li>
-                        <li><img src="http://i.imgur.com/FrZqQR4.jpg"
-                        title="Foursquare" /><br />Places</li>
-                        <li><img src="http://i.imgur.com/qMziIPY.jpg"
-                        title="Strava" /><br />Rides</li>
-                        <li><img src="http://i.imgur.com/lUD3i4d.jpg"
-                        title="Jawbone" /><br />Steps & Zzzs</li>
-                        <li><img src="http://i.imgur.com/tg50Jlc.jpg"
-                        title="Hype Machine" /><br />Jams</li>
-                    </ul>
                     <p>Everything I care about lives in my pocket.</p>
+                    <ul class="grid">
+                        <li><img src="images/qs/myfitnesspal.jpg" title="MyFitnessPal" /><br />Nutrition</li>
+                        <li><img src="images/qs/fitocracy.jpg" title="Fitocracy" /><br />
+                        Strength</li>
+                        <li><img src="images/qs/untappd.jpg" title="Untappd" /><br />BEER!<li>
+                        <li><img src="images/qs/coffee.jpg" title="Coffee by Jawbone" /><br /> Coffee</li>
+                        <li><img src="images/qs/goodreads.jpg" title="Goodreads" /><br />Books<li>
+                        <li><img src="images/qs/pocket.jpg" title="Pocket" /><br />Articles</li>
+                        <li><img src="images/qs/foursquare.jpg" title="Foursquare" /><br />Places</li>
+                        <li><img src="images/qs/strava.jpg" title="Strava" /><br />Rides</li>
+                        <li><img src="images/qs/up.jpg" title="Jawbone"
+                        width="154" height="154" /><br />Steps &<br/> Zzzs</li>
+                        <li><img src="images/qs/hypem.jpg" title="Hype Machine" /><br />Jams</li>
+                    </ul>
                     <aside class="notes">
                         <ol>
                             <li>Daily nutrition with MyFitnessPal: calories and
@@ -107,60 +98,66 @@
                 </section>
 				 <section>
                     <h1>How'd I get started?</h1>
-                    <p>In 2010, I started tracking the weights I was lifting and eventually
-                    calories I was eating, which led to me going </p>
+                    <p>In 2010, I began to track weights as I learned the art of
+                    lifting. An eventual habit of tracking calories led to a
+                    serendipitous change in lifestyle as the number on the scale
+                    began to drop.</p>
+
                     <ul class="grid">
-                        <li class="two">from this<br /><img src="http://i.imgur.com/hdI41me.jpg" alt="Me in
+                        <li class="two"><img src="images/qs/me2010.jpg" alt="Me in
                         2010"/></li>
-                        <li class="two">to this<br /><img
-                        src="http://i.imgur.com/cyE7Xux.jpg" width="66%"
-                        height="66%" alt="Me Summer 2013" /></li>
+                        <li class="two"><img src="images/qs/me2013.jpg" width="66%" height="66%" alt="Me Summer 2013" /></li>
                     </ul>
                     <aside class="notes">Serendipitously
                         <br />
                     </aside>
                 </section>
 				 <section>
-                    <h1>Getting Started</h1>
+                    <h1>Getting in the Groove</h1>
+                    <p>I became more regimented in terms of having a routine</p>
                     <ul>
                         <li>Tracked lifting progress with Fitocracy</li>
-                        <li>Kept an eye on biometrics</li>
+                        <ul>
+                            <li>Gamification == level up IRL </li>
+                        </ul>
+                        <li>Tracked biometrics with a plain ol' spreadsheet</li>
                         <ul>
                             <li>Pounds</li>
                             <li>Body fat</li>
                             <li>Tape measurements</li>
                             <li>Clothing</li>
                         </ul>
-                        <li>Nutrition, nutrition, nutrition</li>
+                        <li>Nutrition is #1</li>
                         <ul>
-                            <li>Calories</li>
-                            <li>Macronutrient balance</li>
+                            <li>Tweaked calorie and macronutrient levels</li>
                             <ul>
                                 <li>Low carb, high protein, moderate fats</li>
                                 <li>High carb, moderate protein, moderate fats</li>
                                 <li>Macronutrient timing</li>
                             </ul>
                         </ul>
+                        <li>Trends in data over time drove me to iterate on process to maintain progress</li>
                     </ul>
-                    <br />
-                    <p>Trends in data over time drove me to iterate on process
-                    to maintain progress</p>
                 </section>
 				 <section>
                     <h1>Learned my limits</h1>
                     <p>Eat less, move more? …not always the best</p>
-                    <div>More != better<br />
+                        <span class="caution"><b>Proceed with caution!</b></span>
+                        <br />
+                        <div><h3>More != better</h3>
                         Low calories & heavy lifting do not play well
-                        together.<br /><br />
-                        <span class="caution"><b>Proceed with
-                        caution!</b></span> It’s not sustainable for a long
-                period of time and requires reverse dieting to scale back.<br />
-                        Reverse dieting? Add more calories to diet until you stop losing.
+                        together and not sustainable.<br /><br />
+                        <b>Tracking both elements let me see my thresholds and
+                            begin the process of reverse dieting</b>
                     </div>
                 </section>
-                <section>
-                    <h3>Moderation creates</h3>
+                <section class="columnized">
+                    <h3>Moderation created</h3>
                     <h1>STICKY HABITS</h1>
+                    <aside>
+                        <img src="images/qs/ducttape.jpg">
+                    </aside>
+                    <article>
                     <ul>
                         <li>Abs are made in the kitchen but you can have your
                         ice cream too</li>
@@ -169,6 +166,7 @@
                         <li>Seeing numbers on the barbell go up made lifting a
                         hobby and not a chore.</li>
                     </ul>
+                    </article>
                     <aside class="notes">
                         Eventually, habits will form. I climbed Half Dome a
                         couple of weekends ago after passing up on the
@@ -225,21 +223,21 @@
                     No immediate plans or concerns...
                 </section>
 				 <section>
-                    <h1>Potential learnings</h1>
+                    <h1>But I am curious about...</h1>
                     <ul>
-                        <li>How does caffeine affect deep sleep?</li>
-                        <li>Optimal sleep for strength levels?</li>
+                        <li>Effects of caffeine on deep sleep</li>
+                        <li>My optimal sleep levels for strength</li>
                         <li>Total calories and the effect on sound sleep</li>
-                        <li>Macronutrient levels and effects of sleep</li>
+                        <li>Macronutrient levels and quality of sleep</li>
                     </ul>
                 </section>
 				 <section>
-                    <h1>Visualizations</h1>
+                    <h1>Looking back...</h1>
                     <ul>
-                        <li>Top foods consumed per season</li>
-                        <li>Most frequented business categories (per region, over time, etc)</li>
-                        <li>Highest source of macronutrients (i.e. Chicken for protein?)</li>
-                        <li>Estimated vitamin or mineral deficiencies?</li>
+                        <li>What are the top foods I ate per season?</li>
+                        <li>What are the types of businesses I visit the most (per region, over time, etc)</li>
+                        <li>What are the highest sources of macronutrients (i.e. Chicken for protein?)</li>
+                        <li>Can I predict vitamin or mineral deficiencies?</li>
                     </ul>
                 </section>
 			</div>
