--- a/talks/quantifiedself.html
+++ b/talks/quantifiedself.html
@@ -240,6 +240,11 @@
                         <li>Can I predict vitamin or mineral deficiencies?</li>
                     </ul>
                 </section>
+                <section>
+                    <h1>Q & A</h1>
+                    Send me your gym selfies? Food porn?
+                    http://twitter.com/pmocampo
+                </section>
 			</div>
 		</div>
 
