--- a/talks/quantifiedself.html
+++ b/talks/quantifiedself.html
@@ -242,8 +242,8 @@
                 </section>
                 <section>
                     <h1>Q & A</h1>
-                    Send me your gym selfies? Food porn?
-                    http://twitter.com/pmocampo
+                    Tweet me your gym selfies? <br />Food porn?
+                    <a href="http://twitter.com/pmocampo">@pmocampo</a>
                 </section>
 			</div>
 		</div>
