Feedback from Erik

--- a/talks/quantifiedself.html
+++ b/talks/quantifiedself.html
@@ -152,6 +152,21 @@
                     </div>
                 </section>
                 <section class="columnized">
+                    <h1>Reverse dieting?</h1>
+                    <aside>
+                        <img src="images/qs/icecream.jpg" alt="Me eating ice cream"/>
+                    </aside>
+                    <article>
+                        <ul>
+                            <li>Despite me eating more calories, I still kept
+                            losing weight.</li>
+                            <li>Added more calories until weight finally
+                            stabilized.</li>
+                            <li>Process took months -- especially after spending 5 weeks in India.</li>
+                        </ul>
+                    </article>
+                    </section>
+                <section class="columnized">
                     <h3>Moderation created</h3>
                     <h1>STICKY HABITS</h1>
                     <aside>
@@ -233,6 +248,7 @@
                 </section>
 				 <section>
                     <h1>Looking back...</h1>
+                    <p>Eventually, I want to visualize questions like:</p>
                     <ul>
                         <li>What are the top foods I ate per season?</li>
                         <li>What are the types of businesses I visit the most (per region, over time, etc)</li>
